fixed alignment issue

--- a/main.css
+++ b/main.css
@@ -7,13 +7,14 @@ body {
     color: #e0e0e0;
 }
 
-.section {
-    padding: 2%;
-}
-
 .mid-column {
     border-left: 1px solid white;
     border-right: 1px solid white;
+}
+
+.section {
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 
 .parallax-bg1 {
@@ -21,7 +22,8 @@ body {
     background-position: center;
     background-image: url("img/Opasna_eta_storona.jpg");
     background-size: cover;
-    padding: 10%;
+    padding-top: 20vh;
+    padding-bottom: 20vh;
 }
 
 .parallax-2 {
